@@ -198,7 +198,7 @@ GstStructure *           gst_caps_get_structure                         (const G
 GstCaps *		 gst_caps_copy_nth                              (const GstCaps * caps, guint nth);
 void			 gst_caps_truncate                              (GstCaps * caps);
 void                     gst_caps_set_simple                            (GstCaps       *caps,
-									 char          *field, ...);
+									 char          *field, ...) G_GNUC_NULL_TERMINATED;
 void                     gst_caps_set_simple_valist                     (GstCaps       *caps,
 									 char          *field,
 									 va_list        varargs);
